<?xml version="1.0"?>
<package>

  <name>nautonomous_launch</name>
  <version>0.0.0</version>
  <description>The nautonomous_launch package</description>

  <maintainer email="daan.zeeuwe01@waternet.nl">Daan Zeeuwe</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

</package>
